# IceLight2

./: .gitignore
software/Icelight/: CMakeLists.txt  IceLight.csv  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
software/Icelight/main/: CMakeLists.txt  IceLedTask.h  IceLight.cpp
software/Icelight/main/src/: IceLight_config.h
software/Icelight/main/src/IceFS/: IceFS.h
software/Icelight/main/src/IceLED/: CRGB.h  ColourHelpers.h  Colour_Pallets.cpp  Colour_Pallets.h  Colour_Utilities.cpp  Colour_Utilities.h  IceLED.cpp  IceLED.h  IceLED_Channel.cpp  IceLED_Channel.h  IceLED_Delay.h  IceLED_Pins.h  IceLED_Segment.h  IceLED_config.h  LED_Types.h  Pixel_Types.h  hsv2rgb.cpp  hsv2rgb.h  lib8tion.h
software/Icelight/main/src/IceLED/lib8tion/: math8.h  random8.h  random8.h.orig  scale8.h  trig8.h
software/Icelight/main/src/IceNetwork/: IceNetwork.h
software/Icelight/main/src/IceServer/: IceServer.cpp  IceServer.h
software/Icelight/main/src/Preferences/: IceLight_NVS_Keys.h  Preferences.hpp
software/Icelight/main/src/Utilities/: MemUsage.h  StringUtilities.h
