idf_component_register(SRCS "IceLight.cpp" "src/IceLED/IceLED.cpp" "src/IceLED/IceLED_Channel.cpp" "src/IceLED/lib8tion.h"
                        "src/IceLED/Colour_Utilities.cpp" "src/IceLED/hsv2rgb.cpp"
                    INCLUDE_DIRS "."
                    "./src"
                    "./src/IceLED")