idf_component_register(SRCS "IceLight.cpp" "src/IceLED/IceLED.cpp" "src/IceLED/IceLED_Channel.cpp" "src/IceLED/lib8tion.h"
                        "src/IceLED/Colour_Utilities.cpp" "src/IceLED/Colour_Utilities.h" "src/IceLED/Colour_Utilities.h" "src/IceLED/hsv2rgb.cpp" 
                        "src/IceLED/Colour_Pallets.cpp" 
                    INCLUDE_DIRS "."
                    "./src"
                    "./src/IceLED")